# RealScreenVoiceAssitant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  session.py
backend/app/agents/: gpt.py
backend/app/realtime/: client.py
backend/app/rtc/: audio_pipeline.py  frame_sampler.py  peer.py  tts_track.py
backend/app/speech/: stt.py  tts.py
backend/app/ws/: control.py  signaling.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  session.ts
frontend/src/app/: Landing.tsx  Session.tsx
frontend/src/rtc/: usePeer.ts
frontend/src/styles/: global.css
frontend/src/ui/: MagneticCTA.tsx  Orb.tsx  Waveform.tsx
frontend/src/ws/: useControl.ts
